# shadow-worker

./: .gitignore  AGENTS.md  README.md  VERSION  build.ps1
backend/: WHISPER_BUILD.md  build-whisper-cgo.bat  build-whisper-libs.bat  go.mod  go.sum  test-asr-cloud.bat  test-asr-e2e.bat
backend/cmd/shadow-worker/: main.go
backend/cmd/shadow-worker-mcp/: main.go
backend/cmd/test-timeline/: main.go
backend/cmd/test-vlm/: main.go
backend/internal/asr/: asr_test.go  cloud.go  cloud_test.go  engine.go  holder.go  local.go  local_e2e_test.go
backend/internal/audio/: capture.go  fft.go  spectrum.go
backend/internal/collector/: appdetect.go  appdetect_test.go  capture.go  collector_integration_test.go  movement.go  movement_test.go  vlm.go  vlm_holder.go  vlm_test.go  windows_enum.go
backend/internal/config/: config.go  default_prompt.txt
backend/internal/grpcapi/: asr_server.go  asr_server_test.go  collection_server.go  collection_server_test.go  config_server.go  server.go  update_server.go  voice_server.go  whitelist_server.go  whitelist_server_test.go
backend/internal/httputil/: retry.go
backend/internal/llm/: cloud.go  engine.go  holder.go
backend/internal/logging/: logging.go
backend/internal/mcp/: server.go  server_test.go
backend/internal/storage/: activity.go  events.go  overview.go  overview_test.go  schema.go  storage_test.go  vlm_tasks.go  whitelist.go  worklog.go
backend/internal/vlm/: bodydecode.go  cloud.go  engine.go  ollama.go
backend/internal/winapi/: dwmapi.go  gdi32.go  kernel32.go  kernel32_test.go  user32.go  user32_test.go
client/: CMakeLists.txt
client/i18n/: shadowworker_zh_CN.ts
client/qml/: Bubble.qml  OverviewPage.qml  PinWindow.qml  RecordingWindow.qml  ScreenshotResultWindow.qml  SettingsPage.qml  TimelinePage.qml  WhitelistPage.qml  main.qml
client/qml/components/: AddAppDialog.qml  AddModelDialog.qml  Badge.qml  Button.qml  Card.qml  Chip.qml  ConfirmDialog.qml  DatePicker.qml  HeatmapGrid.qml  KeyCap.qml  MicTestButton.qml  ModelChipGroup.qml  PlaceholderLabel.qml  PromptItem.qml  QuickSwitchRow.qml  Radio.qml  RankBar.qml  RecordingBubble.qml  ResultBubble.qml  RetryProgressDialog.qml  SaveBar.qml  SelectBox.qml  StatCard.qml  TextArea.qml  TextField.qml  TimelineTrack.qml  TitleBar.qml  Toast.qml  Toggle.qml  UpdateBadge.qml  UpdateDialog.qml  VolumeBar.qml
client/qml/pages/: OverviewPage.qml  SettingsPage.qml  SystemPage.qml  TimelinePage.qml
client/qml/theme/: Theme.qml
client/src/: app.rc  main.cpp
client/src/asr/: asrclient.cpp  asrclient.h  collectionclient.cpp  collectionclient.h  voiceclient.cpp  voiceclient.h
client/src/audio/: audiodevicemanager.cpp  audiodevicemanager.h  audiorecorder.cpp  audiorecorder.h
client/src/hotkey/: globalhotkey.cpp  globalhotkey.h
client/src/i18n/: translator.cpp  translator.h
client/src/image/: windowthumbnailprovider.cpp  windowthumbnailprovider.h
client/src/ui/: traycontroller.cpp  traycontroller.h
client/src/utils/: autostart.cpp  autostart.h  backendlauncher.cpp  backendlauncher.h  singleinstance.cpp  singleinstance.h
client/src/viewmodels/: categoryproxy.cpp  categoryproxy.h  overview_vm.cpp  overview_vm.h  settings_vm.cpp  settings_vm.h  timeline_vm.cpp  timeline_vm.h  timelinemodels.cpp  timelinemodels.h  update_vm.cpp  update_vm.h  whitelist_vm.cpp  whitelist_vm.h
client/src/window/: screenshotcontroller.cpp  screenshotcontroller.h  screenshotwindow.cpp  screenshotwindow.h  textinjector.cpp  textinjector.h  windowhelper.cpp  windowhelper.h  windowpicker.cpp  windowpicker.h
docs/: ARCHITECTURE.md  IMPLEMENTATION-PLAN.md  dashboard-design.md  engineering.md  grpc-mcp-api.md  mcp-impl.md  ui-design.md  ui-spec-v2.md  win32-api.md
package/: ShadowWorker.iss
proto/: asr.proto  collection.proto  config.proto  overview.proto  update.proto  voice.proto  whitelist.proto
scripts/: _build_qt_tmp.bat  _cfg.ps1  _dbg_run.bat  _deploy_tmp.bat  _e2e_test.ps1  _full_dbg.ps1  _incremental.ps1  _kill_port.ps1  _qt_build.ps1  _rebuild.ps1  _run_capture.ps1  _run_client.ps1  _run_dbg.ps1  _show_err.ps1  build.bat  build_client.bat  gen_proto.bat  package.bat  setenv.bat
ui-wireframes/: README.md  ui-wireframe-v2.html
update_service/: config.example.yaml  go.mod  go.sum
update_service/cmd/server/: main.go
update_service/internal/config/: config.go
update_service/internal/db/: db.go
update_service/internal/github/: client.go
update_service/internal/handler/: account.go  auth.go  config.go  release.go  status.go  update.go
update_service/internal/middleware/: auth.go
update_service/internal/model/: model.go
update_service/internal/service/: auth.go  release.go
update_service/internal/storage/: user.go
update_service/internal/version/: version.go
update_service/scripts/: build-linux.sh  build.bat  install.sh
update_service/web/admin/: index.html
update_service/web/admin/static/: app.js
